# glasscart.github.io

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  pages.yml  retrain.yml
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/scripts/: sync-data.mjs
apps/web/src/: App.tsx  index.css  main.tsx
datasets/inventory/: DATASET_CARD.md  generate.py
datasets/pricing/: DATASET_CARD.md  generate.py  pricing_inputs.json
datasets/products/: DATASET_CARD.md  fetch_stock_photos.py  generate.py  products.json
datasets/products/images/: ATTRIBUTION.json
datasets/reviews/: DATASET_CARD.md  generate.py  reviews.json
datasets/transactions/: DATASET_CARD.md  generate.py  transactions.json
docs/: glass-mode.md  index.md  prompt.md  roadmap.md
docs/architecture/: overview.md
docs/research/: fraud.md  inventory.md  pricing.md  product-images.md  ranking.md  recommendations.md  reviews.md  search-and-retrieval.md
docs/subsystems/: fraud.md  inventory.md  pricing.md  ranking.md  recommendations.md  reviews.md  search.md
models/fraud/: MODEL_CARD.md  fraud_scores.json  manifest.json
models/inventory/: MODEL_CARD.md  inventory_forecasts.json  manifest.json
models/pricing/: MODEL_CARD.md  manifest.json  pricing_recommendations.json
models/product-images/: MODEL_CARD.md
models/reviews/: MODEL_CARD.md  manifest.json  product_review_summary.json  review_analysis.json
models/search-embeddings/: MODEL_CARD.md  manifest.json  product_embeddings.json
scripts/: sync_web_data.py
services/search/app/: config.py  corpus.py  hybrid.py  main.py  schemas.py
services/search/tests/: test_hybrid.py
tests/: test_generate_products.py
training/fraud/: detect.py
training/inventory/: forecast.py
training/pricing/: simulate.py
training/product_images/: export_onnx.py  generate.py  requirements.txt
training/reviews/: analyze.py  lexicon.py
training/search_embeddings/: build_index.py
(+52 files in other folders)
