[project]
name = "glasscart"
version = "0.1.0"
description = "GlassCart Python workspace: synthetic dataset generation, model training, and inference services."
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.4,<0.5",
    "rank-bm25>=0.2.2,<0.3",
    "numpy>=1.26,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.7,<1.0",
]
# Optional, opt-in only: one-time export + quantization of a small diffusion
# model for training/product_images/. Never installed by a plain `uv sync` —
# see models/product-images/MODEL_CARD.md for why this stays out of the core
# dependency set (PyTorch is needed transiently to trace the ONNX export;
# generation itself then runs on onnxruntime like the rest of the project).
imagegen = [
    "torch>=2.9,<3.0",
    "diffusers>=0.39,<0.40",
    "transformers>=4.55,<5.0",
    "accelerate>=1.10,<2.0",
    "safetensors>=0.5,<1.0",
    "optimum[onnxruntime]>=2.0,<3.0",
    "onnx>=1.20,<2.0",
    "onnxruntime>=1.23,<2.0",
    "pillow>=11.0,<13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
