[project]
name = "glasscart"
version = "0.1.0"
description = "GlassCart Python workspace: synthetic dataset generation, model training, and inference services."
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.4,<0.5",
    "rank-bm25>=0.2.2,<0.3",
    "numpy>=1.26,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.7,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
